# riscv-arch-test

./: .codespellrc  .gitignore  .gitmodules  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION.md  COPYING.CC  Dockerfile  Makefile  README.md  build-tests-rv64.sh  copilot-instructions.md  csv_edit.py  isolate_coverpoint.py  pyproject.toml  renovate.json  requirements.txt  ruff.toml  run_tests.py  setup.sh  simulator-issues.md  transcript
framework/: pyproject.toml
framework/src/act/: act.py  build.py  build_plan.py  config.py  coverreport.py  makefile_gen.py  merge_summaries.py  parse_test_constraints.py  parse_udb_config.py  riscv-arch-test-vcs.sh  riscv-arch-test.do  sail_to_rvvi.py  select_tests.py  sig_modify.py  trap_report.py
framework/src/act/data/: Gemfile  sail-rv32e.json  sail-rv32i.json  sail-rv64e.json  sail-rv64i.json
framework/src/act/fcov/: disassemble.svh  riscv_arch_test.sv  rvviTrace.sv  testbench.sv
generators/coverage/: covergroupgen.py  pyproject.toml
generators/coverage/src/covergroupgen/: __init__.py  cli.py  generate.py
generators/coverage/templates/: base_sample_header.txt  cmp_rd_rs1_rs2_nx0_pair.sv  cp_cntr.txt  cp_cntr_hpm.txt  cp_csr_frm.txt  cp_csr_frm_v.txt  cp_custom_FpRecSqrtEst_edges.txt  cp_custom_FpRecSqrtEst_flag_edges.txt  cp_custom_FpRecipEst_edges.txt  cp_custom_FpRecipEst_flag_edges.txt  cp_custom_chint.txt  cp_custom_fence.txt  cp_custom_fencei.txt  cp_custom_ffLS.txt  cp_custom_ffLS_update_vl.txt  cp_custom_fmv_fs.txt  cp_custom_fmv_fs_vs2_all_lmul.txt  cp_custom_fmv_sf.txt  cp_custom_fmv_sf_vd_all_lmul.txt  cp_custom_fp_state.txt  cp_custom_indexed_emul_data_only.txt  cp_custom_ls_indexed.txt  cp_custom_maskLS.txt  cp_custom_masked_v0_operand.txt  cp_custom_red.txt  cp_custom_shift_vv_sew64.txt  cp_custom_shift_vx_sew32.txt  cp_custom_shift_vx_sew8.txt  cp_custom_shift_wi.txt  cp_custom_vext2.txt  cp_custom_vext4.txt  cp_custom_vext8.txt  cp_custom_vfclass_onehot.txt  cp_custom_vfncvt_rod_overflow.txt  cp_custom_vfncvt_rup_overflow.txt  cp_custom_vfp_NaN_input.txt  cp_custom_vfp_flags.txt  cp_custom_vfredosum_NAN_vl0.txt  cp_custom_vfredosum_ordered_sum.txt  cp_custom_vindexVV_sew64.txt  (+27 more)
generators/coverage/templates/vector/: cp_custom_ffLS_update_vl.sv  cp_custom_maskLS.txt  cp_custom_masked_v0_operand.txt  cp_custom_maskwrite_masked.sv  cp_custom_shift_vv_sew16.txt  cp_custom_shift_vv_sew32.txt  cp_custom_shift_vv_sew8.sv  cp_custom_shift_vx_sew16.txt  cp_custom_shift_vx_sew64.txt  cp_custom_shift_wi_all.txt  cp_custom_shift_wv_sew16.sv  cp_custom_shift_wv_sew32.txt  cp_custom_shift_wv_sew8.sv  cp_custom_shift_wx_sew16.txt  cp_custom_shift_wx_sew32.sv  cp_custom_shift_wx_sew8.sv  cp_custom_vext2.sv  cp_custom_vext4.txt  cp_custom_vext8.txt  cp_custom_vfncvt_rod_overflow.txt  cp_custom_vfp_NaN_input.sv  cp_custom_vfp_state.sv  cp_custom_vfredosum_NAN_vl0.txt  cp_custom_vindexVV_sew16.sv  cp_custom_vindexVV_sew32.sv  cp_custom_vindexVV_sew64.sv  cp_custom_vindexVV_sew64.txt  cp_custom_vindexVV_sew8.txt  cp_custom_vindexVX_sew16.sv  cp_custom_vindexVX_sew16.txt  cp_custom_vindexVX_sew32.sv  cp_custom_vindexVX_sew32.txt  cp_custom_vindexVX_sew8.sv  cp_custom_vindexVX_sew8.txt  cp_custom_vmv_s_x.sv  cp_custom_wred.sv  (+10 more)
generators/testgen/: pyproject.toml
generators/testgen/scripts/: coverpoint_registry.py  csrtests.py  illegalinstrtests.py  priv_coverpoint_registry.py  vector-testgen-priv.py  vector-testgen-unpriv.py  vector_testgen_common.py
(+11218 files in other folders)
