# pyproject.toml
# act framework python project configuration file for riscv-arch-test
# Jordan Carlin jcarlin@hmc.edu October 2025
# SPDX-License-Identifier: Apache-2.0

[project]
name = "act"
version = "0.3.0"
description = "RISC-V Architecture Certification Test Framework"
readme = "../README.md"
authors = [{ name = "Jordan Carlin", email = "jcarlin@hmc.edu" }]
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.11.9",
  "pyjson5>=2.0.0",
  "rich>=14.0.0",
  "ruamel-yaml>=0.18.16",
  "typer>=0.20.0",
]

[project.scripts]
act = "act.act:main"

##### BUILD #####
[build-system]
requires = ["uv_build>=0.9.4,<0.12.0"]
build-backend = "uv_build"
