# pyproject.toml
# testgen python project configuration file for riscv-arch-test
# Jordan Carlin jcarlin@hmc.edu October 2025
# SPDX-License-Identifier: Apache-2.0

[project]
name = "testgen"
version = "0.4.0"
description = "RISC-V Architecture Compatibility Test Generator"
# readme = "README.md"
authors = [
    { name = "Jordan Carlin", email = "jcarlin@hmc.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.20.0",
    "rich>=13.0.0",
]

[project.scripts]
testgen = "testgen.testgen:main"

##### BUILD #####
[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
